# file-fleet-admiral

./: .gitignore  .hgignore  CMakeLists.txt  ChownWindow.cc  ChownWindow.h  CompareByName.cc  CompareDirsFirst.cc  CompareDirsFirst.h  CompareFunction.h  CompareResult.h  FileCellRenderer.cc  FileCellRenderer.h  FileListElement.cc  FileListElement.h  FilePanelFooter.cc  FilePanelFooter.h  FileType.h  FilesColumns.cc  FilesColumns.h  FilesNavigationPanel.cc  FilesNavigationPanel.h  FilesReadThread.cc  FilesReadThread.h  FilesReadWorker.cc  FilesReadWorker.h  FilesSortType.h  FilesTreeView.cc  FilesTreeView.h  GuiReader.cc  GuiReader.h  MainWindow.cc  MainWindow.h  MenuBar.cc  MenuBar.h  PanelHeader.cc  PanelHeader.h  PathResolver.cc  PathResolver.h  Preconditions.h  Readme.md  (+39 more)
.github/workflows/: cmake.yml
src/: Preconditions.cc  ThreadCalculation.cc  ThreadCalculation.h  ThreadMessage.h  config.h  debug.cc
src/gui/: FileType.h  FileWithInode.cc  FileWithInode.h  GuiReader.cc  GuiReader.h  MainWindow.cc  MainWindow.h  MenuBar.cc  MenuBar.h  MoveFilePopup.cc  MoveFilePopup.h  Rectangle.cc  RenamePopup.cc  RenamePopup.h  SelectionHistory.cc  SelectionHistory.h  SettingsWindow.cc  SizeFormatter.h  SizeFormatterFactory.cc  SizeFormatterHr.h  SizeFormatterSimple.h  SizeFormatterSpaces.cc  main.cc
src/gui/bottom_panel/: BottomPanel.cc  BottomPanel.h
src/gui/file_panel/: FileListElement.cc  FileListElement.h  FilePanelFooter.cc  FilesColumns.cc  FilesColumns.h  FilesNavigationPanel.cc  FilesNavigationPanel.h  FilesTreeView.cc  FilesTreeView.h  SinglePanel.cc  SinglePanel.h
src/icon_provider/: AlwaysSameIconProvider.cc  AlwaysSameIconProvider.h  FileAndDirectoryStaticIconProvider.cc  FileAndDirectoryStaticIconProvider.h  FileByTypeIconProvider.cc  FileByTypeIconProvider.h  FileIconProvider.h  FileTypeIconProvider.cc  FileTypeIconProvider.h  IconProvider.cc  IconProvider.h  IconsRendererFactory.cc  IconsRendererFactory.h
src/keyboard/: KeyWithDescription.cc  KeyWithDescription.h  KeyboardShortcuts.cc  KeyboardShortcuts.h
src/operations/: InterThreadProgressPipe.cc  InterThreadProgressPipe.h  NotifiableByContentChange.cc  NotifiableByContentChange.h  RenameExecutor.cc  RenameExecutor.h  ThreadPerformingMove.cc  ThreadPerformingMove.h  ThreadPerformingRename.cc  ThreadPerformingRename.h
src/settings/: FileIconsRenderingType.h  Settings.cc  Settings.h
src/sort/: CompareByName.cc  CompareByName.h  CompareBySize.cc  CompareBySize.h  CompareDirsFirst.h  CompareFunction.cc  CompareFunction.h  SortChain.cc  SortChain.h
src/viewer/: FileViewer.cc  FileViewer.h
tests/: Asserts.cc  Asserts.h  CMakeLists.txt  Runner.cc  Runner.h  makefile  readDirTest.cc  readMultiThreadDirs.cc  sizeDisplayTest.cc  sortChainTest.cc
